// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Basic check basic render 1`] = `
<div
  class="tree"
  role="tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="tree-indent"
    >
      <div
        class="tree-indent-unit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="tree-treenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            />
            <span
              class="tree-switcher tree-switcher_open"
            />
            <span
              class="tree-checkbox"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="tree-icon-ele tree-icon__open"
              />
              <span
                class="tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="tree-treenode tree-treenode-disabled tree-treenode-switcher-open"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            >
              <span
                class="tree-indent-unit tree-indent-unit-start tree-indent-unit-end"
              />
            </span>
            <span
              class="tree-switcher tree-switcher-noop"
            />
            <span
              class="tree-checkbox tree-checkbox-disabled"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="tree-icon-ele tree-icon__docu"
              />
              <span
                class="tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="tree-treenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            >
              <span
                class="tree-indent-unit tree-indent-unit-start tree-indent-unit-end"
              />
            </span>
            <span
              class="tree-switcher tree-switcher-noop"
            />
            <span
              class="tree-checkbox"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="tree-icon-ele tree-icon__docu"
              />
              <span
                class="tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic check check update when Tree trigger componentWillReceiveProps 1`] = `
<div
  class="tree"
  role="tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="tree-indent"
    >
      <div
        class="tree-indent-unit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="tree-treenode tree-treenode-switcher-close tree-treenode-checkbox-checked tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            />
            <span
              class="tree-switcher tree-switcher-noop"
            />
            <span
              class="tree-checkbox tree-checkbox-checked"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-normal"
              title="parent 1"
            >
              <span
                class="tree-icon-ele tree-icon__docu"
              />
              <span
                class="tree-title"
              >
                parent 1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic renders correctly 1`] = `
<div
  class="tree tree-show-line"
  role="tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="tree-indent"
    >
      <div
        class="tree-indent-unit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="spe tree-treenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            />
            <span
              class="tree-switcher tree-switcher_open"
            />
            <span
              class="tree-checkbox"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-open"
              title="parent 1"
            >
              <span
                class="tree-icon-ele tree-icon__open"
              />
              <span
                class="tree-title"
              >
                parent 1
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="tree-treenode tree-treenode-disabled tree-treenode-switcher-open"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            >
              <span
                class="tree-indent-unit tree-indent-unit-start tree-indent-unit-end"
              />
            </span>
            <span
              class="tree-switcher tree-switcher_open"
            />
            <span
              class="tree-checkbox tree-checkbox-disabled"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-open"
              title="leaf 1"
            >
              <span
                class="tree-icon-ele tree-icon__open"
              />
              <span
                class="tree-title"
              >
                leaf 1
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="tree-treenode tree-treenode-switcher-open"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            >
              <span
                class="tree-indent-unit tree-indent-unit-start tree-indent-unit-end"
              />
              <span
                class="tree-indent-unit tree-indent-unit-start"
              />
            </span>
            <span
              class="tree-switcher tree-switcher-noop"
            />
            <span
              class="tree-checkbox"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="tree-icon-ele tree-icon__docu"
              />
              <span
                class="tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="tree-treenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            >
              <span
                class="tree-indent-unit tree-indent-unit-start tree-indent-unit-end"
              />
              <span
                class="tree-indent-unit tree-indent-unit-start"
              />
            </span>
            <span
              class="tree-switcher tree-switcher-noop"
            />
            <span
              class="tree-checkbox"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="tree-icon-ele tree-icon__docu"
              />
              <span
                class="tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="tree-treenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            >
              <span
                class="tree-indent-unit tree-indent-unit-start tree-indent-unit-end"
              />
            </span>
            <span
              class="tree-switcher tree-switcher-noop"
            />
            <span
              class="tree-checkbox tree-checkbox-disabled"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-normal"
              title="leaf 2"
            >
              <span
                class="tree-icon-ele tree-icon__docu"
              />
              <span
                class="tree-title"
              >
                leaf 2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic renders opaque children correctly 1`] = `
<div
  class="tree"
  role="tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="tree-indent"
    >
      <div
        class="tree-indent-unit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="tree-treenode tree-treenode-switcher-close tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="tree-indent"
            />
            <span
              class="tree-switcher tree-switcher_close"
            />
            <span
              class="tree-node-content-wrapper tree-node-content-wrapper-close"
              title="0"
            >
              <span
                class="tree-icon-ele tree-icon__close"
              />
              <span
                class="tree-title"
              >
                0
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
